# algoritmStruct

./: CMakeLists.txt
ambroskin/alab1/: alab1.cpp
ambroskin/alab10/: alab10.2.cpp  alab10.cpp
ambroskin/alab11/: alab11.2.cpp  alab11.cpp
ambroskin/alab12/: alab12.cpp
ambroskin/alab13/: alab13.cpp
ambroskin/alab2/: Arrays.cpp  Arrays.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp
ambroskin/alab3/: main.cpp  search.cpp  search.h
ambroskin/alab5/: main.cpp
ambroskin/alab6/: main.cpp  prime_search.cpp  prime_search.h
ambroskin/alab7/: alab5.2.cpp  alab5.3.cpp  alab5.4.cpp  alab5.5.cpp  alab5.cpp  main.cpp  search_strings.cpp  search_strings.h
ambroskin/alab8/: alab6.cpp  kmp_search.cpp  kmp_search.h  main.cpp
ambroskin/alab9/: alab9.2.cpp  alab9.cpp  main.cpp  selection_sort.cpp  selection_sort.h
ambroskin/lab4/: alab4.cpp  binary_search.cpp  binary_search.h  main.cpp
lab4/: main.cpp  main.h
