cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled lab4/main.cpp
        lab4/main.h
        lab5/one-dimensionalarray/main.cpp
        lab5/main.h
        lab5/multy-dimensionalarray/main.cpp
        lab5/multy-dimensionalarray/main.h
        lab6/main.cpp
        lab6/main.h
        lab8/main.cpp
        lab8/main.h
        lab9/main.cpp
        lab9/main.h
        ambroskin/lab4/binary_search.cpp
        ambroskin/alab8/alab6.cpp
        ambroskin/alab9/alab9.cpp
        ambroskin/alab9/alab9.2.cpp
        ambroskin/alab10/alab10.cpp
        ambroskin/alab10/alab10.2.cpp
        ambroskin/alab11/alab11.cpp
        ambroskin/alab11/alab11.2.cpp
        ambroskin/alab12/alab12.cpp
        ambroskin/alab13/alab13.cpp
        ambroskin/alab1/alab1.cpp
        ambroskin/alab2/Arrays.cpp
        ambroskin/alab2/Arrays.h
        ambroskin/alab2/task1.cpp
        ambroskin/alab2/task2.cpp
        ambroskin/alab2/task3.cpp
        ambroskin/alab2/task4.cpp
        ambroskin/alab3/search.cpp
        ambroskin/alab3/search.h
        ambroskin/alab3/main.cpp
        ambroskin/lab4/binary_search.h
        ambroskin/lab4/main.cpp
        ambroskin/alab5/main.cpp
        ambroskin/alab6/prime_search.h
        ambroskin/alab6/prime_search.cpp
        ambroskin/alab6/main.cpp
        ambroskin/alab7/search_strings.h
        ambroskin/alab7/search_strings.cpp
        ambroskin/alab7/main.cpp
)
